--- a/index.html
+++ b/index.html
@@ -3,5 +3,23 @@
   <head>
     <title>Exploding Sun by JavaScript</title>
   </head>
-  <iframe src = "https://www.khanacademy.org/computer-programming/balloon-sun/5802931414679552" title="Exploding Sun by pjrocks62 on Khan Academy"></iframe>
+    <script>
+    noStroke();
+    // the beautiful blue sky
+    background(82, 222, 240);
+
+    // the starting size for the sun
+    var sunSize = 30; 
+    draw = function() {
+        sunSize = sunSize + 1;
+         // The sun, a little circle on the horizon
+        fill(255, 204, 0);
+        ellipse(200, 298, sunSize, sunSize);
+
+        // The land, blocking half of the sun
+        fill(76, 168, 67);
+        rect(0, 300, 400, 100);
+    };
+  </script>
+
   </htmL>
