--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Exploding Sun by JavaScript</title>
   </head>
+  <script>
+    window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+</script>
     <script>
     noStroke();
     // the beautiful blue sky
