--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Exploding Sun by JavaScript</title>
   </head>
+  <script>window.__HEADERS__ = {"X-KA-has-any-permissions":"false","X-KA-is-phantom":"false","X-KA-Published-Content-Version":"ce0fbca6d11aae94abdea8e0d66e435d23604127","X-KA-Lang":"en","X-KA-is-e2e":"false","X-KA-is-ios":"false","X-KA-may-be-under13":"false","X-KA-Static-Version":"211202-0620-1625cfe4b38d","X-KA-is-tablet":"false","X-KA-is-phone":"false","X-Fastly-Country":"US","X-KA-Locale-Status":null,"X-KA-is-unsupported-browser":"false","X-KA-Curriculum":"us-cc","X-KA-Locale":"en"};</script>
   <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 </script>
