--- a/index.html
+++ b/index.html
@@ -7,22 +7,5 @@
   <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 </script>
-    <script>
-      noStroke();
-      // the beautiful blue sky
-      background(82, 222, 240);
-
-      // the starting size for the sun
-      var sunSize = 30; 
-      draw = function() {
-          sunSize = sunSize + 1;
-           // The sun, a little circle on the horizon
-          fill(255, 204, 0);
-          ellipse(200, 298, sunSize, sunSize);
-
-          // The land, blocking half of the sun
-          fill(76, 168, 67);
-          rect(0, 300, 400, 100);
-      };
-  </script>
+    <script src = "\index.js"></script>
   </htmL>
