--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 </script>
     <script src = "\index.js"></script>
+  <script src = "hexi.min.js"></script>
   </htmL>
